# task-management

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: architecture.md  automation.md  concepts.md  flows.md  roadmap.md  usage.md
task_engine/: __init__.py  alerts.py  cli_utils.py  db.py  main.py  models.py  service.py
task_engine/commands/: lifecycle.py  query.py  system.py  update.py
tests/: conftest.py  test_service.py
tests/service/: test_add_task.py  test_block_task.py  test_delete_task.py  test_done_task.py  test_drop_task.py  test_followups.py  test_get_active_next.py  test_list_tasks.py  test_start_task.py  test_update_task.py
