# ==========================================
# LEVEL 1: BUILD SYSTEM (Packaging Foundation)
# ==========================================
[build-system]
requires = ["setuptools>=70.0,<90.0"]
build-backend = "setuptools.build_meta"

# ==========================================
# LEVEL 2: PROJECT METADATA (Core Info & Dependencies)
# ==========================================
[project]
name = "work-state-engine"
version = "0.1.0"
description = "CLI-first personal workflow tool - optimised for continuation, not planning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cli", "task", "workflow", "productivity"]

dependencies = [
    "typer>=0.12",
    "rich>=13",
]

# ==========================================
# LEVEL 3: EXTRAS & ENTRY POINTS (Auxiliary & CLI)
# ==========================================
[project.optional-dependencies]
windows = ["win10toast>=0.9"]
dev = [
    # testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # linting & formatting (Ruff replaces black, isort, flake8)
    "ruff>=0.3.0",
    # type checking
    "mypy>=1.10",
]

[project.scripts]
task = "task_engine.main:main"

# ==========================================
# LEVEL 4: BUILD TOOL SPECIFICS (Setuptools Configuration)
# ==========================================
[tool.setuptools.packages.find]
where = ["."]
include = ["task_engine*"]

# ==========================================
# LEVEL 5: DEV TOOLS CONFIGURATION (CI Pipeline Order)
# ==========================================

# --- 5.1 Linting & Formatting (Ruff) ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E, F: equivalent to Flake8 | I: equivalent to isort
select = ["E", "F", "I"] 
ignore = ["E203"]

# --- 5.2 Type Checking ---
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# --- 5.3 Testing ---
[tool.pytest.ini_options]
testpaths = ["tests"]
